1.0 (2022/1/20)

- separate R image from datascience-notebook-plus